<resources>
    <string name="app_name">My Application</string>
    <string name="menu">Menu</string>
    <string name="chat">Chat</string>
    <string name="status">Status</string>
    <string name="welcome_to_home">Welcome to Home</string>
    <string name="welcome_to_chat">Welcome to Chat</string>
    <string name="welcome_to_status">Welcome to Status</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="_0">0</string>
    <string name="hello_zero">Hello Zero</string>
    <string name="hello_one">Hello One</string>
    <string name="hello_two">Hello Two</string>
    <string name="hello_three">Hello Three</string>
    <string name="enter_your_email">Enter Your Email :</string>
    <string name="enter_your_password">Enter Your Password :</string>
</resources>