<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <HorizontalScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp">
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_zero"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/hello_zero"
                    android:textSize="12sp"
                    app:chipCornerRadius="20dp"
                    app:chipStrokeWidth="1.2dp"
                    app:chipStrokeColor="@color/posts_text_color"
                    android:textColor="@color/posts_text_color"
                    android:backgroundTint="@color/comment_card_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_one"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/chip_zero"
                    android:layout_marginStart="10dp"
                    android:text="@string/hello_one"
                    android:textSize="12sp"
                    app:chipCornerRadius="20dp"
                    app:chipStrokeWidth="1.2dp"
                    app:chipStrokeColor="@color/posts_text_color"
                    android:textColor="@color/posts_text_color"
                    android:backgroundTint="@color/comment_card_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_two"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/chip_one"
                    android:layout_marginStart="10dp"
                    android:text="@string/hello_two"
                    android:textSize="12sp"
                    app:chipCornerRadius="20dp"
                    app:chipStrokeWidth="1.2dp"
                    app:chipStrokeColor="@color/posts_text_color"
                    android:textColor="@color/posts_text_color"
                    android:backgroundTint="@color/comment_card_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_three"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/chip_two"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/hello_three"
                    android:textSize="12sp"
                    app:chipCornerRadius="20dp"
                    app:chipStrokeWidth="1.2dp"
                    app:chipStrokeColor="@color/posts_text_color"
                    android:textColor="@color/posts_text_color"
                    android:backgroundTint="@color/comment_card_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>
    <ImageView
        android:id="@+id/profile_image"
        app:layout_constraintStart_toStartOf="@id/email_layout"
        app:layout_constraintEnd_toEndOf="@id/email_layout"
        app:layout_constraintTop_toBottomOf="@id/scroll_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:clickable="true"
        android:src="@drawable/ic_add"
        android:background="@drawable/rounded_background"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="@id/scroll_view"
        app:layout_constraintEnd_toEndOf="@id/scroll_view"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        android:hint="@string/enter_your_email"
        app:hintTextColor="@color/posts_text_color"
        app:boxStrokeColor="@color/posts_text_color"
        app:boxBackgroundColor="@color/comment_card_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        app:layout_constraintTop_toBottomOf="@id/email_layout"
        app:layout_constraintStart_toStartOf="@id/scroll_view"
        app:layout_constraintEnd_toEndOf="@id/scroll_view"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        android:hint="@string/enter_your_password"
        app:hintTextColor="@color/posts_text_color"
        app:boxStrokeColor="@color/posts_text_color"
        app:boxBackgroundColor="@color/comment_card_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        app:layout_constraintStart_toStartOf="@id/password_layout"
        app:layout_constraintEnd_toEndOf="@id/password_layout"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        android:layout_width="0dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="40dp"
        android:text="Submit"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/posts_text_color"
        app:strokeWidth="1dp"
        app:strokeColor="@color/comment_card_color"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>